fixed blurry icons in FF

--- a/css/img_global.css
+++ b/css/img_global.css
@@ -1316,3 +1316,6 @@ hr {
 .ud-active.userdelete {
 	bottom: 6px;
 }
+svg {
+  -moz-transform: scale(1);
+}
